--- a/html/index.html
+++ b/html/index.html
@@ -1,40 +1,132 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Pollen Map</title>
-  <style>
-    #map {
-      height: 500px;
-      width: 100%;
+  <head>
+    <title>Ireland Pollen Map</title>
+     <style>
+      #map {
+      height: 100vh;  /* full viewport height */
+     width: 100%;
     }
+
+    button{
+    width:100px;
+    height:34px; 
+    /*top:50px;*/
+    display:inline-block;
+    position:relative;
+    text-align:center;
+    border:none;
+    box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.29);
+    color:#FFF;
+    font-weight:400;
+    border-radius:4px;
+    margin-left:4px;
+    font-family:"Google Sans","Roboto","Arial";
+    line-height:1em;
+  }
+    #tree{background:#009c1a}
+    #grass{background:#22b600}
+    #weed{background:#26cc00}
+    button:active{background:#999999 !important;}
   </style>
-</head>
-<body>
-  <h1>Pollen Forecast Map</h1>
-  <div id="map"></div>
-
+  </head>
+  <body>
+    <div id="container">
+      <button id="tree">TREE</button>
+      <button id="grass">GRASS</button>
+      <button id="weed">WEED</button>
+    </div>
+    <div id="map"></div>  
   <script>
-    function initMap() {
-      const location = { lat: 32.32, lng: 35.32 };
-      const map = new google.maps.Map(document.getElementById('map'), {
-        zoom: 8,
-        center: location,
-        mapId: '4cd92f36fb2ff143b1b66208'
-      });
+      function getNormalizedCoord(coord, zoom) {
+    const y = coord.y;
+    let x = coord.x;
+    // Define the tile range in one direction. The range is dependent on zoom level:
+    // 0 = 1 tile, 1 = 2 tiles, 2 = 4 tiles, 3 = 8 tiles, etc.
+    const tileRange = 100 << zoom;
 
-      // Place a marker at the location (optional)
-    //   const marker = new google.maps.marker.AdvancedMarkerElement({
-    //     position: location,
-    //     map: map,
-    //     title: "Pollen data location"
-    //   });
-
-      // You can add more markers or overlays here later
+    // don't repeat across y-axis (vertically)
+    if (y < 0 || y >= tileRange) {
+      return null;
     }
-  </script>
 
-  <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDj1vaGauNRgZ8uF5e0WjVgYopOe72avdQ&callback=initMap&libraries=marker">
+    // repeat across x-axis
+    if (x < 0 || x >= tileRange) {
+      x = ((x % tileRange) + tileRange) % tileRange;
+    }
+    return { x: x, y: y };
+  }
+
+  let pollen = "TREE_UPI"
+  class PollenMapType {
+    tileSize;
+    alt = null;
+    maxZoom = 16;
+    minZoom = 3;
+    name = null;
+    projection = null;
+    radius = 6378137;
+    constructor(tileSize) {
+      this.tileSize = tileSize;
+    }
+
+    getTile(coord, zoom, ownerDocument) {
+      const img = ownerDocument.createElement("img");
+      const mapType = pollen;
+      const normalizedCoord = getNormalizedCoord(coord, zoom);
+
+      const x = coord.x;
+      const y = coord.y;
+      const key = "AIzaSyDj1vaGauNRgZ8uF5e0WjVgYopOe72avdQ";
+      img.style.opacity = 0.8;
+      img.src = `https://pollen.googleapis.com/v1/mapTypes/${mapType}/heatmapTiles/${zoom}/${x}/${y}?key=${key}`;
+      return img;
+    }
+    releaseTile(tile) {}
+  }
+
+function initMap() {
+  const myLatLng = { lat: 39.8283, lng: -98.5795 }; 
+
+  map = new google.maps.Map(document.getElementById("map"), {
+    mapId: "4cd92f36fb2ff143b1b66208",
+    zoom: 3,
+    center: myLatLng,
+    maxZoom: 16,
+    minZoom: 3,
+    restriction: {
+      latLngBounds: { north: 50, south: 24, west: -125, east: -66 },
+      strictBounds: true,
+    },
+    streetViewControl: false,
+  });
+
+  pollenMapType = new PollenMapType(new google.maps.Size(256, 256)); // <-- move here
+  map.overlayMapTypes.insertAt(0, pollenMapType);
+
+  document.querySelector("#tree").addEventListener("click", function(){
+    pollen ="TREE_UPI"
+    map.overlayMapTypes.removeAt(0);
+    const pollenMapType = new PollenMapType(new google.maps.Size(256, 256));
+    map.overlayMapTypes.insertAt(0, pollenMapType);
+  });
+  document.querySelector("#grass").addEventListener("click", function(){
+    pollen ="GRASS_UPI"
+    map.overlayMapTypes.removeAt(0);
+    const pollenMapType = new PollenMapType(new google.maps.Size(256, 256));
+    map.overlayMapTypes.insertAt(0, pollenMapType);
+  });
+  document.querySelector("#weed").addEventListener("click", function(){
+    pollen ="WEED_UPI"
+    map.overlayMapTypes.removeAt(0);
+    const pollenMapType = new PollenMapType(new google.maps.Size(256, 256));
+    map.overlayMapTypes.insertAt(0, pollenMapType);
+  });
+}
+
   </script>
-</body>
+  <script
+    src="https://maps.googleapis.com/maps/api/js?callback=initMap&v=weekly&key=AIzaSyDj1vaGauNRgZ8uF5e0WjVgYopOe72avdQ&language=en" defer>
+  </script>
+  </body>
 </html>
