--- a/html/data.html
+++ b/html/data.html
@@ -1,87 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PAM - Data Trends</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      background-color: #F5F5DC;
-      color: #2F4F2F;
-    }
-    nav {
-      width: 100%;
-      background: #9CAF88;
-      padding: 1rem 0;
-      position: relative;
-    }
-    .logo {
-      position: absolute;
-      left: 1rem;
-      top: 50%;
-      transform: translateY(-50%);
-      height: 200px;
-    }
-    nav ul {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
-    }
-    nav a {
-      color: #F5F5DC;
-      text-decoration: none;
-      padding: 0.5rem 1rem;
-    }
-    nav a:hover {
-      background: #7A8471;
-    }
-    h1 {
-      text-align: center;
-      margin: 2rem 0;
-      color: #2F4F2F;
-    }
-    .intro-panel {
-      background: #9CAF88;
-      color: #F5F5DC;
-      padding: 2rem;
-      margin: 2rem 0;
-      border-radius: 10px;
-      width: 80%;
-      max-width: 800px;
-      text-align: center;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      transition: all 0.3s ease;
-    }
-    .intro-panel:hover {
-      background: #7A8471;
-      transform: translateY(-5px);
-      box-shadow: 0 8px 16px rgba(0,0,0,0.2);
-    }
-    .intro-panel h2 {
-      font-size: 2.5rem;
-      margin: 0 0 1rem 0;
-      color: #F5F5DC;
-    }
-    .intro-panel p {
-      font-size: 1.2rem;
-      margin: 0;
-    }
-    .chart-container {
-      width: 80%;
-      max-width: 800px;
-      margin: 2rem 0;
-      background: white;
-      padding: 2rem;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    }
-  </style>
+  <link rel="stylesheet" href="/css/data.css">
 </head>
 <body>
   <nav>
@@ -93,64 +16,20 @@
       <li><a href="about.html">About</a></li>
     </ul>
   </nav>
-  
+
   <h1>Data Trends</h1>
-  
+
   <div class="intro-panel">
     <h2>Pollen Data Analytics</h2>
     <p>Explore historical pollen data trends and seasonal patterns to better understand pollen forecasts.</p>
   </div>
-  
-  <div class="chart-container">
-    <canvas id="pollenChart"></canvas>
+
+  <div class="chart-container" id="chart-container">
+    <!-- D3 chart will be injected here -->
   </div>
-  
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script>
-    const ctx = document.getElementById('pollenChart').getContext('2d');
-    const pollenChart = new Chart(ctx, {
-      type: 'line',
-      data: {
-        labels: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'],
-        datasets: [{
-          label: 'Tree Pollen',
-          data: [2, 5, 15, 35, 45, 25, 10, 8, 12, 18, 8, 3],
-          borderColor: '#9CAF88',
-          backgroundColor: 'rgba(156, 175, 136, 0.1)',
-          tension: 0.4
-        }, {
-          label: 'Grass Pollen',
-          data: [1, 2, 8, 20, 40, 50, 45, 35, 15, 5, 2, 1],
-          borderColor: '#7A8471',
-          backgroundColor: 'rgba(122, 132, 113, 0.1)',
-          tension: 0.4
-        }, {
-          label: 'Weed Pollen',
-          data: [1, 1, 3, 5, 8, 12, 20, 35, 45, 25, 8, 2],
-          borderColor: '#2F4F2F',
-          backgroundColor: 'rgba(47, 79, 47, 0.1)',
-          tension: 0.4
-        }]
-      },
-      options: {
-        responsive: true,
-        plugins: {
-          title: {
-            display: true,
-            text: 'Seasonal Pollen Trends'
-          }
-        },
-        scales: {
-          y: {
-            beginAtZero: true,
-            title: {
-              display: true,
-              text: 'Pollen Count'
-            }
-          }
-        }
-      }
-    });
-  </script>
+
+  <!-- Load D3.js and your chart script -->
+  <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script src="chart.js"></script>
 </body>
 </html>
