--- a/html/data.html
+++ b/html/data.html
@@ -1,10 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PAM - Data Trends</title>
-  <link rel="stylesheet" href="/css/data.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-color: #F5F5DC;
+      color: #2F4F2F;
+    }
+    nav {
+      width: 100%;
+      background: #9CAF88;
+      padding: 1rem 0;
+      position: relative;
+    }
+    .logo {
+      position: absolute;
+      left: 1rem;
+      top: 50%;
+      transform: translateY(-50%);
+      height: 200px;
+    }
+    nav ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+    }
+    nav a {
+      color: #F5F5DC;
+      text-decoration: none;
+      padding: 0.5rem 1rem;
+    }
+    nav a:hover {
+      background: #7A8471;
+    }
+    h1 {
+      text-align: center;
+      margin: 2rem 0;
+      color: #2F4F2F;
+    }
+    .intro-panel {
+      background: #9CAF88;
+      color: #F5F5DC;
+      padding: 2rem;
+      margin: 2rem 0;
+      border-radius: 10px;
+      width: 80%;
+      max-width: 800px;
+      text-align: center;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      transition: all 0.3s ease;
+    }
+    .intro-panel:hover {
+      background: #7A8471;
+      transform: translateY(-5px);
+      box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+    }
+    .intro-panel h2 {
+      font-size: 2.5rem;
+      margin: 0 0 1rem 0;
+      color: #F5F5DC;
+    }
+    .intro-panel p {
+      font-size: 1.2rem;
+      margin: 0;
+    }
+    .chart-container {
+      width: 80%;
+      max-width: 960px;
+      margin: 2rem 0;
+      background: white;
+      padding: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+  </style>
 </head>
 <body>
   <nav>
@@ -16,20 +94,91 @@
       <li><a href="about.html">About</a></li>
     </ul>
   </nav>
-
+  
   <h1>Data Trends</h1>
-
+  
   <div class="intro-panel">
     <h2>Pollen Data Analytics</h2>
     <p>Explore historical pollen data trends and seasonal patterns to better understand pollen forecasts.</p>
   </div>
-
+  
   <div class="chart-container" id="chart-container">
     <!-- D3 chart will be injected here -->
   </div>
 
-  <!-- Load D3.js and your chart script -->
+  <!-- D3.js Library -->
   <script src="https://d3js.org/d3.v7.min.js"></script>
-  <script src="chart.js"></script>
+
+  <script>
+    // Sample data for demonstration (replace with your actual unemployment data)
+    const unemployment = [
+      {rate: 0.1}, {rate: 3.2}, {rate: 5.1}, {rate: 6.7}, {rate: 2.9},
+      {rate: 4.9}, {rate: 3.3}, {rate: 5.4}, {rate: 6.1}, {rate: 3.8},
+      {rate: 5.0}, {rate: 4.4}, {rate: 6.3}, {rate: 7.2}, {rate: 3.5}
+      // Add more as needed...
+    ];
+
+    function drawChart() {
+      const width = 960;
+      const height = 500;
+      const marginTop = 20;
+      const marginRight = 20;
+      const marginBottom = 30;
+      const marginLeft = 40;
+
+      const bins = d3.bin()
+          .thresholds(40)
+          .value((d) => d.rate)(unemployment);
+
+      const x = d3.scaleLinear()
+          .domain([bins[0].x0, bins[bins.length - 1].x1])
+          .range([marginLeft, width - marginRight]);
+
+      const y = d3.scaleLinear()
+          .domain([0, d3.max(bins, (d) => d.length)])
+          .range([height - marginBottom, marginTop]);
+
+      const svg = d3.create("svg")
+          .attr("width", width)
+          .attr("height", height)
+          .attr("viewBox", [0, 0, width, height])
+          .attr("style", "max-width: 100%; height: auto;");
+
+      svg.append("g")
+          .attr("fill", "steelblue")
+        .selectAll("rect")
+        .data(bins)
+        .join("rect")
+          .attr("x", (d) => x(d.x0) + 1)
+          .attr("width", (d) => Math.max(0, x(d.x1) - x(d.x0) - 1))
+          .attr("y", (d) => y(d.length))
+          .attr("height", (d) => y(0) - y(d.length));
+
+      svg.append("g")
+          .attr("transform", `translate(0,${height - marginBottom})`)
+          .call(d3.axisBottom(x).ticks(width / 80).tickSizeOuter(0))
+          .call((g) => g.append("text")
+              .attr("x", width)
+              .attr("y", marginBottom - 4)
+              .attr("fill", "currentColor")
+              .attr("text-anchor", "end")
+              .text("Unemployment rate (%) →"));
+
+      svg.append("g")
+          .attr("transform", `translate(${marginLeft},0)`)
+          .call(d3.axisLeft(y).ticks(height / 40))
+          .call((g) => g.select(".domain").remove())
+          .call((g) => g.append("text")
+              .attr("x", -marginLeft)
+              .attr("y", 10)
+              .attr("fill", "currentColor")
+              .attr("text-anchor", "start")
+              .text("↑ Frequency (no. of counties)"));
+
+      document.getElementById("chart-container").appendChild(svg.node());
+    }
+
+    drawChart();
+  </script>
 </body>
 </html>
