--- a/html/types.html
+++ b/html/types.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>PAM - Pollen Types</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       margin: 0;
