--- a/html/index.html
+++ b/html/index.html
@@ -116,19 +116,19 @@
       border-radius: 10px;
     }
 
-    /* Container needed to position the button. Adjust the width as needed */
+  
 .container {
   position: relative;
   width: 50%;
 }
 
-/* Make the image responsive */
+
 .container img {
   width: 100%;
   height: auto;
 }
 
-/* Style the button and place it in the middle of the container/image */
+
 .container .btn {
   position: absolute;
   top: 50%;
@@ -147,13 +147,56 @@
 .container .btn:hover {
   background-color: rgb(223, 177, 52);
 }
+.column {
+  float: left;
+  width: 50%;
+}
+
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.bottomofpage img {
+  width: 100%;
+  height: auto;
+  max-width: 600px; 
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+  transition: all 0.3s ease;
+  border-radius: 10px;
+  margin-left: 50%;
+}
+
+.bottomofpage img:hover {
+  transform: scale(1.05); 
+  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2); 
+}
+
+
+.preview {
+  margin-bottom: 2rem; 
+}
+
+
+.bottomofpage {
+  margin-top: 2rem; 
+  text-align: center;
+  margin-right: 20%;
+}
+
+.column img {
+  max-width: 100%; 
+  height: auto;
+}
 
 
   </style>
 </head>
 <body>
   <nav>
-    <img src="../LOGO.png" alt="PAM Logo" class="logo">
+    <img src="LOGO.png" alt="PAM Logo" class="logo">
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="types.html">Pollen Types</a></li>
@@ -165,15 +208,14 @@
  <div id="vanta-bg"></div>
 
 
-  <!-- Include THREE.js -->
+ 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
 
-<!-- Include the Vanta.js effect you want (example: BIRDS) -->
 <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
 
 <script>
   VANTA.BIRDS({
-    el: "#vanta-bg",          // target element
+    el: "#vanta-bg",          
     mouseControls: true,
     touchControls: true,
     gyroControls: false,
@@ -182,8 +224,8 @@
     scale: 1.00,
     scaleMobile: 1.00,
     backgroundColor: 0x3d8553,
-    color1: 0xffff00,         // Primary bird color (yellow)
-    color2: 0xffcc00          // Secondary bird color (optional, also yellowish)
+    color1: 0xffff00,         
+    color2: 0xffcc00          
   });
 </script>
 
@@ -202,8 +244,20 @@
   <button class="btn" >Click here to access the map</button>
   </a>
 </div>
+<div class="row">
+  <div class="column">
+    <div class="preview">
+    <h2>How it works</h2>
+    <p>how everything works yappa yappa yappa yappa</p>
+  </div>
+  </div>
+  <div class="column">
+    <div class ="bottomofpage">
+     <img src="Pollen.png">
+  </div>
+</div>
 
-  
+ 
    <script>
     function initMap() {
       const location = { lat: 32.32, lng: 35.32 };
