--- a/html/about.html
+++ b/html/about.html
@@ -11,6 +11,9 @@
       align-items: center;
       background-color: #F5F5DC;
       color: #2F4F2F;
+      min-height: 100vh;  /* Ensure full height for body */
+  justify-content: flex-start; /* Keep content at the top */
+  padding: 0 2rem; /* Add some padding on left and right */
     }
     nav {
       width: 100%;
