--- a/html/types.html
+++ b/html/types.html
@@ -195,12 +195,12 @@
     <div class="flip-card">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;">
+          <img src="/assets/BIRCH.jpg" alt="Avatar" style="width:300px;height:300px;">
         </div>
         <div class="flip-card-back">
-          <h1>Tree</h1>
-          <p>Found in</p>
-          <p>Blooms in</p>
+          <h1>Birch Tree</h1>
+          <p> Common in the Northeast, Upper Midwest and parts of the Atlantic. Birch pollen is abunfdant in states like Minnesota, Wisconsin,New York, and New England.</p>
+          <p> Blooms in March to May, peaking in April.</p>
         </div>
       </div>
     </div>
@@ -208,24 +208,24 @@
     <div class="flip-card">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;">
+          <img src="/assets/CEDAR.jpeg" alt="Avatar" style="width:300px;height:300px;">
         </div>
         <div class="flip-card-back">
-          <h1>Tree</h1>
-          <p>Found in</p>
-          <p>Blooms in</p>
+          <h1>Cedar Tree</h1>
+          <p> Found in the South and Southwest, especially in Texas, Oklahoma and parts of Arizona.</p>
+          <p> Bloom season is mainly December to March with a peak in January and February. </p>
         </div>
       </div>
     </div>
         <div class="flip-card">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;">
+          <img src="/assets/OAK.webp" alt="Avatar" style="width:300px;height:300px;">
         </div>
         <div class="flip-card-back">
-          <h1>Tree</h1>
-          <p>Found in</p>
-          <p>Blooms in</p>
+          <h1>Oak Tree</h1>
+          <p> Abundant in the Southeast, Midwest and Northeast.The key states that it is found include Texas, Georgia, Missouri, Pensnsylvania and New York.</p>
+          <p> Blooming typically March to June, peaking around April and May.</p>
         </div>
       </div>
     </div>
@@ -234,7 +234,7 @@
 
   
     <div class="pollen-card">
-      <h3>Grass Pollen</h3>
+      <h3>Grass</h3>
       <p>Peak season is late spring to early summer. Bermuda and Timothy grass are major contributors.</p>
     </div>
     <div class="flip-card-container">
@@ -242,12 +242,12 @@
     <div class="flip-card">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;">
+          <img src="/assets/FESCUE.jpg" alt="Avatar" style="width:300px;height:300px;">
         </div>
         <div class="flip-card-back">
-          <h1>Grass</h1>
-          <p>Found in</p>
-          <p>Blooms in</p>
+          <h1>Fescue Grass</h1>
+          <p> Found primarily in the Midwest, Mid-Atlantic and parts of Northeast.common in states such as Ohio, Pennsylvania and New York.</p>
+          <p> Blooms mainly in May to July, peaking in late spring to early summer.</p>
         </div>
       </div>
     </div>
@@ -255,32 +255,32 @@
     <div class="flip-card">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;">
+          <img src="/assets/BAHIA.jpg" alt="Avatar" style="width:300px;height:300px;">
         </div>
         <div class="flip-card-back">
-          <h1>Grass</h1>
-          <p>Found in</p>
-          <p>Blooms in</p>
+          <h1>Bahia Grass</h1>
+          <p> Native and widespread in the Southeast and Gulf Coast states, particularly Florida, Louisiana, Alabama and Georgia.</p>
+          <p> Bloom season around April to October.</p>
         </div>
       </div>
     </div>
         <div class="flip-card">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;">
+          <img src="/assets/RYEGRASS.jpg" alt="Avatar" style="width:300px;height:300px;">
         </div>
         <div class="flip-card-back">
-          <h1>Grass</h1>
-          <p>Found in</p>
-          <p>Blooms in</p>
+          <h1>Rye Grass</h1>
+          <p> Common in the Pacific Northwest,Northeast and northern Midwest.States include Washington,Oregon, New York and Michigan</p>
+          <p> Blooms mainly April ro June.</p>
         </div>
       </div>
     </div>
   </div>
 
     <div class="pollen-card">
-      <h3>Weed Pollen</h3>
-      <p>Most active in fall, ragweed is the most common weed pollen causing allergic reactions.</p>
+      <h3> Weed Pollen</h3>
+      <p> Most active in fall, ragweed is the most common weed pollen causing allergic reactions.</p>
     </div>
   </div>
   <div class="flip-card-container">
@@ -288,12 +288,12 @@
     <div class="flip-card">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;">
+          <img src="/assets/RAGWEED.jpg" alt="Avatar" style="width:300px;height:300px;">
         </div>
         <div class="flip-card-back">
-          <h1>Weed</h1>
-          <p>Found in</p>
-          <p>Blooms in</p>
+          <h1>Ragweed</h1>
+          <p> One of the most common and widespread weed pollens. Found predominantly in the Midwest, Northeast and Southeast.States with high ragweeds pollen include Illinois, Ohio, Pennsylvania, New York and Tennessee.</p>
+          <p> Blooms from August to November peaking in September.</p>
         </div>
       </div>
     </div>
@@ -301,24 +301,24 @@
     <div class="flip-card">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;">
+          <img src="/assets/RUSSIAN.jpg" alt="Avatar" style="width:300px;height:300px;">
         </div>
         <div class="flip-card-back">
-          <h1>Weed</h1>
-          <p>Found in</p>
-          <p>Blooms in</p>
+          <h1>Russian Thistle</h1>
+          <p> Mostly found in the arid and semi-arid regions of the Southwest, including parts of Texas,New Mexico, Arizona and Carlifornia.</p>
+          <p> Blooming season is from August to October.</p>
         </div>
       </div>
     </div>
         <div class="flip-card">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;">
+          <img src="/assets/PIGWEED.jpg" alt="Avatar" style="width:300px;height:300px;">
         </div>
         <div class="flip-card-back">
-          <h1>Weed</h1>
-          <p>Found in</p>
-          <p>Blooms in</p>
+          <h1>Pigweed</h1>
+          <p> Common in the Midwest and Southern states, including states like Arkansas,Oklahoma, Texas and Missouri.</p>
+          <p> Blooms mainly July to October.</p>
         </div>
       </div>
     </div>
